# siyuan-harmony

./: .gitignore  README.md  README.zh-CN.md  README_zh_CN.md  build-profile.json5  oh-package-lock.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/: libkernel.h
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets  ShorthandAbility.ets
entry/src/main/ets/pages/: Agreement.ets  Index.ets  JSHarmony.ets  Main.ets  Print.ets  PrivacyPolicyDialog.ets  Shorthand.ets  Utils.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/media/: shorthand.json
entry/src/main/resources/base/profile/: main_pages.json  shortcuts_config.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
